--- a/src/lab/Courses Aligned.html
+++ b/src/lab/Courses Aligned.html
@@ -101,7 +101,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="col-md-10 lab-list-col-10">
 							
 							<!--edit -->
-<h1 class="text-h2-lightblue">Problem Solving Lab</h1><div>
+<h1 class="text-h2-lightblue" style="color: red">Problem Solving Lab</h1><div>
 <br/><p> The present lab is aligned with courses such as Introduction to Data Structures, Data Structures in C/C++, and the like. The experiments touch on most topics covered in such courses in most curricula. </p>
 </div>						</div>
 					</div>
